Ensures dropdown content is fully visible

--- a/css/interface.css
+++ b/css/interface.css
@@ -48,7 +48,7 @@
 }
 
 .panel-group .panel {
-  overflow: hidden;
+  overflow: visible;
 }
 
 .panel.focus .fa-trash {
